--- a/index.html
+++ b/index.html
@@ -5,153 +5,202 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="fonts/fonts.css" >
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
 
   <body>
     <header class="header">
-<nav>
-  <ul class="menu header_menu">
+      <nav>
+        <ul class="menu header_menu">
           <li class="menu__links-item_no-bullit">
             <a class="menu__link menu__link_active">главная</a>
           </li>
           <li class="menu__links-item">
             <a class="menu__link" href="#lots">посмотреть лоты</a>
           </li>
-            <li class="menu__links-item">
-              <a class="menu__link" href="#about">об аукционе</a>
-            </li>
-          </ul>
-</nav>
-<div class="header__logo-container">
-  <a class="header_logo">
-    <img class="header_logo-image" src="./images/logo-black.svg" alt="логотип оно тебе надо">
-</a>
-</div>
-<address class="address header_address">
-    <a href="tel:+99995555555">+9 999 555 5555</a>
-    <br>
-    <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-    <p> наб. Принсенграхт 263- <br>265, Амстердам</p>
- </address>
-</header>
+          <li class="menu__links-item">
+            <a class="menu__link" href="#about">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header_logo">
+        <img
+          class="header_logo-image"
+          src="./images/logo-black.svg"
+          alt="логотип оно тебе надо"
+        />
+      </a>
+      <address class="address header_address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <br />
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263- <br />265, Амстердам</p>
+      </address>
+    </header>
 
-<main class="main">
- 
-  <section class="cover">
-    <div class="overlay"></div>
-      <h1 class="cover__title">
-    <span class="aligned_text aligned_text_left">О<span class="letter_spacing-extended">НО</span></span>
-    <span class="aligned_text aligned_text_center">ТЕ<span class="letter_spacing-extended">БЕ</span></span>
-    <span class="aligned_text aligned_text_right"><span class="letter_spacing-extended">Н</span>АД<span class="no-letter-spacing">о</span></span>
-    </h1>
-     <div class="cover__discription">
-      <p class="discription_text">Аукцион вещей, в которые никто не верил
-      </p> 
-      <button class="bet_button">СДЕЛАТЬ СТАВКУ</button>
-      </div> 
-</section>
-
-<section id="lots" class="lots">
-  <h2 class="lots__heading">ЛОТЫ</h2>
-  <ul class="lots__card-list">
-    <li class="lots__card-list-item">
-      <a class="card__link" href="#0">
-        <article class="card card__lot_film">
+    <main class="main">
+      <section class="cover">
         <div class="overlay"></div>
-        <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
-        <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-       </article>
-      </a>
-    </li>
-    <li class="lots__card-list-item">
-      <a class="card__link" href="#0">
-        <article class="card card__lot_book">
-          <div class="overlay"></div>
-        <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
-      <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
-          </article>
-      </a>
-    </li>
-     <li class="lots__card-list-item">
-      <a class="card__link" href="#0">
-        <article class="card card__lot_picture">
-          <div class="overlay"></div>
-      <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-      <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
-     </article>
-      </a>
-    </li>
-  </ul>
-  <a class="lots__link" href="#0">посмотреть больше</a>
-</section>
+        <h1 class="cover__title">
+          <span class="aligned_text aligned_text_left"
+            >О<span class="letter_spacing-extended">НО</span></span
+          >
+          <span class="aligned_text aligned_text_center"
+            >ТЕ<span class="letter_spacing-extended">БЕ</span></span
+          >
+          <span class="aligned_text aligned_text_right"
+            ><span class="letter_spacing-extended">Н</span>АД<span
+              class="no-letter-spacing"
+              >о</span
+            ></span
+          >
+        </h1>
+        <div class="cover__discription">
+          <p class="discription_text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button class="bet_button" type="button">СДЕЛАТЬ СТАВКУ</button>
+        </div>
+      </section>
 
-<section id="about" class="about">
-  <div class="about__logo-column">
-  <div class="about__logo-container">
-    <a class ="about__logo">
-      <img class="about__logo-image" src="./images/logo-white.svg" alt="логотип оно тебе надо">
-    </a>
-  </div>
-  </div>
-  <div class="about__text-column">
-  <div class="about__text">
-    <h2 class="about__title">ОБ АУКЦИОНЕ</h2>
-    <div class="about__paragraph first_paragraph">
-      <p>Здесь вы не встретите очередное пафосное собрание невероятно </p>
-      <p>дорогого антиквариата. Наши лоты вообще не должны были попасть</p>
-      <p>ни на один аукцион. Потому что кому нужен дневник девочки-</p>
-      <p>подростка или картина, которую может нарисовать даже ребёнок?</p>
-      <p> Кому нужны все эти странные вещи, созданные любителями?
-    </p>
-  </div>
-      <div class="about__paragraph">
-        <p>Слишком сложные или, наоборот, слишком простые. Опережающие</p>
-         <p>своё время. В пух и прах растерзанные критиками. Непринятые и</p>
-          <p>непонятые. Когда-то они казались просто неудачными. Но, несмотря</p>
-      <p>на критику, кажущуюся простоту или сложность, сейчас без этих лотов</p>
-      <p> невозможно представить современную культуру. Когда в эти вещи не</p>
-      <p>верил никто, продолжали верить их создатели. И сейчас эти лоты</p>
-      <p>стали культовыми.</p> 
-    </div>
-  </div>
-  </div>
-</section>
-</main>
+      <section id="lots" class="lots">
+        <h2 class="lots__heading">ЛОТЫ</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a class="card__link" href="#0">
+              <article class="card card__type_film">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card__link" href="#0">
+              <article class="card card__type_book">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card__link" href="#0">
+              <article class="card card__type_picture">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a class="lots__link" href="#0">посмотреть больше</a>
+      </section>
 
-  <footer class="footer">
+      <section id="about" class="about">
+        <div class="about__logo-column">
+          <div class="about__logo-container">
+            <a class="about__logo">
+              <img
+                class="about__logo-image"
+                src="./images/logo-white.svg"
+                alt="логотип оно тебе надо"
+              />
+            </a>
+          </div>
+        </div>
+        <div class="about__text-column">
+          <div class="about__text">
+            <h2 class="about__title">ОБ АУКЦИОНЕ</h2>
+            <div class="about__paragraph">
+              <p>
+                Здесь вы не встретите очередное пафосное собрание невероятно
+                дорогого антиквариата. Наши лоты вообще не должны были попасть
+                ни на один аукцион. Потому что кому нужен дневник девочки-
+                подростка или картина, которую может нарисовать даже ребёнок?
+                Кому нужны все эти странные вещи, созданные любителями?
+              </p>
+              <p>
+                Слишком сложные или, наоборот, слишком простые. Опережающие своё
+                время. В пух и прах растерзанные критиками. Непринятые и
+                непонятые. Когда-то они казались просто неудачными. Но, несмотря
+                на критику, кажущуюся простоту или сложность, сейчас без этих
+                лотов невозможно представить современную культуру. Когда в эти
+                вещи не верил никто, продолжали верить их создатели. И сейчас
+                эти лоты стали культовыми.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
       <address class="address footer_address">
-          <a href="tel:+99995555555">+9 999 555 5555</a>
-          <br>
-          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-          <p> наб. Принсенграхт 263-265,<br> Амстердам</p>
-       </address>
-       <nav> 
-       <ul class="menu footer_menu">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <br />
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>
+          наб. Принсенграхт 263-265,<br />
+          Амстердам
+        </p>
+      </address>
+      <nav>
+        <ul class="menu footer_menu">
           <li class="menu__links-item">
             <a class="menu__link menu__link_active">главная</a>
           </li>
           <li class="menu__links-item">
             <a class="menu__link" href="#lots">посмотреть лоты</a>
           </li>
-            <li class="menu__links-item">
-              <a class="menu__link" href="#about">об аукционе</a>
-            </li>
+          <li class="menu__links-item">
+            <a class="menu__link" href="#about">об аукционе</a>
+          </li>
         </ul>
       </nav>
-     <div class="footer_social">
-        <a class="footer_social__link" href="https://www.youtube.com/">
-          <img src="./images/yt.svg" alt="лого ютуб">
+      <div class="footer_social">
+        <a
+          class="footer_social__link"
+          href="https://www.youtube.com/"
+          target="_blank"
+        >
+          <img src="./images/yt.svg" alt="лого ютуб" />
         </a>
-        <a class="footer_social__link" href="https://vk.com/">
-          <img src="./images/vk.svg" alt="лого вк">
+        <a class="footer_social__link" href="https://vk.com/" target="_blank">
+          <img src="./images/vk.svg" alt="лого вк" />
         </a>
-        <a class="footer_social__link" href="https://pinterest.com/">
-          <img src="./images/pinterest.svg" alt="лого пинтерест">
+        <a
+          class="footer_social__link"
+          href="https://pinterest.com/"
+          target="_blank"
+        >
+          <img src="./images/pinterest.svg" alt="лого пинтерест" />
         </a>
       </div>
-  </footer>
+    </footer>
   </body>
 </html>
